--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 }
 
 section{
+    box-sizing: border-box;
     width: 860px;
     padding: 10px;
     margin-bottom: 20px;
@@ -83,6 +84,9 @@ nav ul li a {
 }
 
 nav ul li a:hover{
+    text-shadow: 0px 4px 6px white
+}
+nav ul li a:active{
     text-shadow: 0px 4px 6px white
 }
 
@@ -215,5 +219,10 @@ footer {
     
     footer {
         padding: 20px 10px; /* Větší padding pro lepší čitelnost na mobilech */
+    }
+
+    .container-item{
+        width: 100% !important;
+        margin-right: 0;
     }
 }
