--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ section{
     background-color: #FAF0E6;
     margin-bottom: 10px;
     margin-right: 5px;
+    padding-right: 5px;
     min-height: 200px;
 }
 
@@ -92,7 +93,9 @@ nav ul li a:active{
 
 
 main {
+    box-sizing: border-box;
     width: 100%;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -180,6 +183,10 @@ footer {
     font-size: 25px;
     color: #333; /* Tmavě šedá barva ikon */
     text-decoration: none;
+}
+
+.social-links a:hover, .social-links a:active {
+    color: rgb(208, 11, 11);
 }
 
 /* Responzivní styly */
